Sync user and role management implementation from SLM