@@ -1,6 +1,5 @@
 package egi.eu;
 
-import egi.eu.model.*;
 import org.eclipse.microprofile.openapi.annotations.Operation;
 import org.eclipse.microprofile.openapi.annotations.media.Content;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
@@ -18,7 +17,10 @@ import io.smallrye.mutiny.tuples.Tuple2;
 import io.micrometer.core.instrument.MeterRegistry;
 import io.quarkus.security.identity.SecurityIdentity;
 
+import java.time.LocalDateTime;
+import java.time.format.DateTimeParseException;
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import jakarta.annotation.security.RolesAllowed;
@@ -28,8 +30,10 @@ import jakarta.ws.rs.core.*;
 
 import egi.checkin.CheckinConfig;
 import egi.checkin.model.CheckinUser;
+import egi.eu.model.*;
 import egi.eu.entity.UserEntity;
 import egi.eu.entity.RoleEntity;
+import egi.eu.entity.RoleLogEntity;
 
 
 /***
@@ -66,29 +70,43 @@ public class Users extends BaseResource {
     /***
      * Page of users
      */
-    public static class PageOfUsers extends Page<UserInfo> {
-        public PageOfUsers(String baseUri, long offset, long limit, List<CheckinUser> checkinUsers) {
+    public static class PageOfUsers extends Page<UserInfo, Long> {
+        public PageOfUsers(String baseUri, long from, int limit, List<CheckinUser> checkinUsers) {
             super();
 
             var users = checkinUsers.stream().map(UserInfo::new).collect(Collectors.toList());
-            populate(baseUri, offset, limit, users);
+            populate(baseUri, from, limit, users, true);
         }
     }
 
     /***
      * Page of roles
      */
-    public static class PageOfRoles extends Page<Role> {
-        public PageOfRoles(String baseUri, long offset, long limit, List<Role> roles) {
-            super(baseUri, offset, limit, roles); }
+    public static class PageOfRoles extends Page<Role, Long> {
+        public PageOfRoles(String baseUri, long from, int limit, List<Role> roles) {
+            // Always loads all (from database)
+            super(baseUri, from, limit, roles, true); }
     }
 
     /***
      * Page of role infos
      */
-    public static class PageOfRoleInfos extends Page<RoleInfo> {
-        public PageOfRoleInfos(String baseUri, long offset, long limit, List<RoleInfo> roles) {
-            super(baseUri, offset, limit, roles); }
+    public static class PageOfRoleInfos extends Page<RoleInfo, Long> {
+        public PageOfRoleInfos(String baseUri, long from, int limit, List<RoleInfo> roles) {
+            // Always loads all (from Check-in)
+            super(baseUri, from, limit, roles, true); }
+    }
+
+    /***
+     * Page of role assignment logs
+     */
+    public static class PageOfRoleLogs extends Page<RoleLog, LocalDateTime> {
+        public PageOfRoleLogs(String baseUri, LocalDateTime from, int limit, List<RoleLogEntity> logs_) {
+            super();
+
+            var logs = logs_.stream().map(RoleLog::new).collect(Collectors.toList());
+            populate(baseUri, from, limit, logs, false);
+        }
     }
 
 
@@ -96,6 +114,17 @@ public class Users extends BaseResource {
      * Constructor
      */
     public Users() { super(log); }
+
+    /***
+     * Filter a list with a predicate.
+     * @param criteria The predicate to apply to each element
+     * @param list The list to filter
+     * @param <T> Type of list elements
+     * @return Another list containing just the matching elements
+     */
+    private<T> List<T> filterList(List<T> list, Predicate<T> criteria) {
+        return list.stream().filter(criteria).collect(Collectors.<T>toList());
+    }
 
     /**
      * Retrieve information about current user.
@@ -118,10 +147,10 @@ public class Users extends BaseResource {
             @APIResponse(responseCode = "403", description="Permission denied"),
             @APIResponse(responseCode = "503", description="Try again later")
     })
-    public Uni<Response> getUserInfo(@RestHeader(HttpHeaders.AUTHORIZATION) String auth) {
-
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
+    public Uni<Response> getUserInfo(@RestHeader(HttpHeaders.AUTHORIZATION) String auth)
+    {
+        addToDC("userIdCaller", identity.getAttribute(CheckinUser.ATTR_USERID));
+        addToDC("userNameCaller", identity.getAttribute(CheckinUser.ATTR_FULLNAME));
 
         log.info("Getting user info");
 
@@ -167,7 +196,7 @@ public class Users extends BaseResource {
      * List users that are members of the configured VO.
      * @param auth The access token needed to call the service.
      * @param onlyProcess Filter out users that are not included in the configured Check-in group
-     * @param offset The number of elements to skip
+     * @param from The number of elements to skip
      * @param limit_ The maximum number of elements to return
      * @return API Response, wraps an ActionSuccess({@link PageOfUsers}) or an ActionError entity
      */
@@ -192,26 +221,26 @@ public class Users extends BaseResource {
                                    @Context HttpHeaders httpHeaders,
 
                                    @RestQuery("onlyProcess")
-                                   @Parameter(description = "Return only members of the SLM process")
+                                   @Parameter(description = "Return only members of the SYS process")
                                    @Schema(defaultValue = "false")
                                    boolean onlyProcess,
 
-                                   @RestQuery("offset")
+                                   @RestQuery("from")
                                    @Parameter(description = "Skip the first given number of results")
                                    @Schema(defaultValue = "0")
-                                   long offset,
+                                   long from,
 
                                    @RestQuery("limit")
                                    @Parameter(description = "Restrict the number of results returned")
                                    @Schema(defaultValue = "100")
-                                   long limit_) {
+                                   int limit_)
+    {
+        final int limit = (0 == limit_) ? 100 : limit_;
 
-        final long limit = (0 == limit_) ? 100 : limit_;
-
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
+        addToDC("userIdCaller", identity.getAttribute(CheckinUser.ATTR_USERID));
+        addToDC("userNameCaller", identity.getAttribute(CheckinUser.ATTR_FULLNAME));
         addToDC("onlyProcess", onlyProcess);
-        addToDC("offset", offset);
+        addToDC("from", from);
         addToDC("limit", limit);
 
         log.info("Listing users");
@@ -236,7 +265,7 @@ public class Users extends BaseResource {
                 // Got users, success
                 log.info("Got user list");
                 var uri = getRealRequestUri(uriInfo, httpHeaders);
-                var page = new PageOfUsers(uri.toString(), offset, limit, users);
+                var page = new PageOfUsers(uri.toString(), from, limit, users);
                 return Uni.createFrom().item(Response.ok(page).build());
             })
             .onFailure().recoverWithItem(e -> {
@@ -250,14 +279,16 @@ public class Users extends BaseResource {
     /**
      * Add user to the configured group.
      * @param auth The access token needed to call the service.
-     * @param checkinUserId The Check-in Id of the user to add to the group.
+     * @param userId The Check-in Id of the user to add to the group (unused).
+     * @param user The user to add to the group.
      * @return API Response, wraps an ActionSuccess or an ActionError entity
      */
     @POST
-    @Path("/process/{checkinUserId}")
+    @Path("/process/{userId}")
     @SecurityRequirement(name = "OIDC")
+    @Consumes(MediaType.APPLICATION_JSON)
     @RolesAllowed({ Role.IMS_OWNER, Role.IMS_MANAGER })
-    @Operation(operationId = "addUserToGroup",  summary = "Include user in the SLM process")
+    @Operation(operationId = "addUserToGroup",  summary = "Include user in the SYS process")
     @APIResponses(value = {
             @APIResponse(responseCode = "200", description = "Included",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON,
@@ -274,16 +305,33 @@ public class Users extends BaseResource {
     })
     public Uni<Response> addUserToGroup(@RestHeader(HttpHeaders.AUTHORIZATION) String auth,
 
-                                        @RestPath("checkinUserId")
+                                        @RestPath("userId")
                                         @Parameter(description = "Id of user to include in the process")
-                                        int checkinUserId) {
+                                        String userId,
 
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
-        addToDC("checkinUserId", checkinUserId);
+                                        User user)
+    {
+        var grant = new RoleGrant(new User(
+            (String)identity.getAttribute(CheckinUser.ATTR_USERID),
+            (String)identity.getAttribute(CheckinUser.ATTR_FULLNAME),
+            (String)identity.getAttribute(CheckinUser.ATTR_EMAIL)
+        ));
+        grant.assign = true;
+        grant.role = Role.PROCESS_MEMBER;
+
+        addToDC("userIdCaller", grant.changeBy.checkinUserId);
+        addToDC("userNameCaller", grant.changeBy.fullName);
+        addToDC("user", user);
 
         log.info("Adding user to group");
 
+        if(null == user || null == user.checkinUserId || user.checkinUserId.isBlank()) {
+            // User must be specified
+            var ae = new ActionError("badRequest", "User is required");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+
+        var added = new ArrayList<Boolean>();
         Uni<Response> result = Uni.createFrom().nullItem()
 
             .chain(unused -> {
@@ -296,14 +344,27 @@ public class Users extends BaseResource {
             })
             .chain(unused -> {
                 // Add user
-                return checkin.addUserToGroupAsync(checkinUserId, this.imsConfig.group());
+                return checkin.addUserToGroupAsync(user.checkinUserId, this.imsConfig.group());
+            })
+            .chain(addedOrUpdated -> {
+                // Added user, log it
+                added.add(true);
+                return logRoleAssignment(grant);
             })
             .chain(unused -> {
-                // Added user, success
+                // Added user logged, success
                 log.info("Added user to group");
                 return Uni.createFrom().item(Response.ok(new ActionSuccess("Included")).build());
             })
             .onFailure().recoverWithItem(e -> {
+                if(!added.isEmpty()) {
+                    // User added, but not logged
+                    log.warn("Added user to group, but failed to log it");
+                    return Response.ok(new ActionSuccess("Included, but not logged"))
+                            .status(Response.Status.CREATED)
+                            .build();
+                }
+
                 log.error("Failed to add user to group");
                 return new ActionError(e, Tuple2.of("oidcInstance", this.checkinConfig.server())).toResponse();
             });
@@ -314,14 +375,16 @@ public class Users extends BaseResource {
     /**
      * Remove user to the configured group.
      * @param auth The access token needed to call the service.
-     * @param checkinUserId The Check-in Id of the user to remove from the group.
+     * @param userId The Check-in Id of the user to remove from the group (unused).
+     * @param user The user to remove from the group.
      * @return API Response, wraps an ActionSuccess or an ActionError entity
      */
     @DELETE
-    @Path("/process/{checkinUserId}")
+    @Path("/process/{userId}")
     @SecurityRequirement(name = "OIDC")
+    @Consumes(MediaType.APPLICATION_JSON)
     @RolesAllowed({ Role.IMS_OWNER, Role.IMS_MANAGER })
-    @Operation(operationId = "removeUserFromGroup",  summary = "Exclude user from the SLM process")
+    @Operation(operationId = "removeUserFromGroup",  summary = "Exclude user from the SYS process")
     @APIResponses(value = {
             @APIResponse(responseCode = "200", description = "Excluded",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON,
@@ -338,16 +401,33 @@ public class Users extends BaseResource {
     })
     public Uni<Response> removeUserFromGroup(@RestHeader(HttpHeaders.AUTHORIZATION) String auth,
 
-                                             @RestPath("checkinUserId")
+                                             @RestPath("userId")
                                              @Parameter(description = "Id of user to exclude from the process")
-                                             int checkinUserId) {
+                                             String userId,
 
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
-        addToDC("checkinUserId", checkinUserId);
+                                             User user)
+    {
+        var grant = new RoleGrant(new User(
+                (String)identity.getAttribute(CheckinUser.ATTR_USERID),
+                (String)identity.getAttribute(CheckinUser.ATTR_FULLNAME),
+                (String)identity.getAttribute(CheckinUser.ATTR_EMAIL)
+        ));
+        grant.assign = false;
+        grant.role = Role.PROCESS_MEMBER;
+
+        addToDC("userIdCaller", grant.changeBy.checkinUserId);
+        addToDC("userNameCaller", grant.changeBy.fullName);
+        addToDC("user", user);
 
         log.info("Removing user from group");
 
+        if(null == user || null == user.checkinUserId || user.checkinUserId.isBlank()) {
+            // User must be specified
+            var ae = new ActionError("badRequest", "User is required");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+
+        var removed = new ArrayList<Boolean>();
         Uni<Response> result = Uni.createFrom().nullItem()
 
             .chain(unused -> {
@@ -360,14 +440,27 @@ public class Users extends BaseResource {
             })
             .chain(unused -> {
                 // Remove user
-                return checkin.removeUserFromGroupAsync(checkinUserId, this.imsConfig.group());
+                return checkin.removeUserFromGroupAsync(user.checkinUserId, this.imsConfig.group());
+            })
+            .chain(success -> {
+                // Removed user, log it
+                removed.add(true);
+                return logRoleAssignment(grant);
             })
             .chain(unused -> {
-                // Removed user, success
+                // Removed user logged, success
                 log.info("Removed user from group");
                 return Uni.createFrom().item(Response.ok(new ActionSuccess("Excluded")).build());
             })
             .onFailure().recoverWithItem(e -> {
+                if(!removed.isEmpty()) {
+                    // User removed, but not logged
+                    log.warn("Removed user from group, but failed to log it");
+                    return Response.ok(new ActionSuccess("Excluded, but not logged"))
+                            .status(Response.Status.CREATED)
+                            .build();
+                }
+
                 log.error("Failed to remove user from group");
                 return new ActionError(e, Tuple2.of("oidcInstance", this.checkinConfig.server())).toResponse();
             });
@@ -382,8 +475,8 @@ public class Users extends BaseResource {
      * @param roleNameFragment Only return users holding this role. If empty or null,
      *                         all users holding roles are returned.
      *                         Note: Using this parameter means the returned users will not have
-     *      *                        all their roles reported, just the ones matching this expression.
-     * @param offset The number of elements to skip
+     *                               all their roles reported, just the ones matching this expression.
+     * @param from The number of elements to skip
      * @param limit_ The maximum number of elements to return
      * @return API Response, wraps an ActionSuccess({@link PageOfUsers}) or an ActionError entity
      */
@@ -391,7 +484,7 @@ public class Users extends BaseResource {
     @Path("/users/roles")
     @SecurityRequirement(name = "OIDC")
     @RolesAllowed({ Role.IMS_USER })
-    @Operation(operationId = "listUsersWithRoles",  summary = "List users with roles in the SLM process")
+    @Operation(operationId = "listUsersWithRoles",  summary = "List users with roles in the SYS process")
     @APIResponses(value = {
             @APIResponse(responseCode = "200", description = "Success",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON,
@@ -411,22 +504,22 @@ public class Users extends BaseResource {
                                             @Parameter(description = "Return only users holding roles matching this expression")
                                             String roleNameFragment,
 
-                                            @RestQuery("offset")
+                                            @RestQuery("from")
                                             @Parameter(description = "Skip the first given number of results")
                                             @Schema(defaultValue = "0")
-                                            long offset,
+                                            long from,
 
                                             @RestQuery("limit")
                                             @Parameter(description = "Restrict the number of results returned")
                                             @Schema(defaultValue = "100")
-                                            long limit_) {
+                                            int limit_)
+    {
+        final int limit = (0 == limit_) ? 100 : limit_;
 
-        final long limit = (0 == limit_) ? 100 : limit_;
-
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
+        addToDC("userIdCaller", identity.getAttribute(CheckinUser.ATTR_USERID));
+        addToDC("userNameCaller", identity.getAttribute(CheckinUser.ATTR_FULLNAME));
         addToDC("roleNameFragment", roleNameFragment);
-        addToDC("offset", offset);
+        addToDC("from", from);
         addToDC("limit", limit);
 
         log.info("Listing users with roles");
@@ -449,7 +542,7 @@ public class Users extends BaseResource {
                 // Got users holding roles, success
                 log.info("Got users with roles");
                 var uri = getRealRequestUri(uriInfo, httpHeaders);
-                var page = new PageOfUsers(uri.toString(), offset, limit, users);
+                var page = new PageOfUsers(uri.toString(), from, limit, users);
                 return Uni.createFrom().item(Response.ok(page).build());
             })
             .onFailure().recoverWithItem(e -> {
@@ -460,18 +553,53 @@ public class Users extends BaseResource {
         return result;
     }
 
+    /***
+     * Log the assignment/revocation of a role.
+     * @param grant The role that was assigned/revoked and the users involved
+     * @return True on success
+     */
+    private Uni<Void> logRoleAssignment(RoleGrant grant) {
+
+        Uni<Void> result = sf.withTransaction((session, tx) -> { return
+                // Find the users involved in this log entry
+                UserEntity.findByCheckinUserIds(Arrays.asList(
+                                grant.roleHolder.checkinUserId,
+                                grant.changeBy.checkinUserId))
+                    .chain(users -> {
+                        // Got users with the specified Ids
+                        var roleHolderL = filterList(users, user -> user.checkinUserId.equals(grant.roleHolder.checkinUserId));
+                        var changeByL = filterList(users, user -> user.checkinUserId.equals(grant.changeBy.checkinUserId));
+
+                        var roleHolder = roleHolderL.isEmpty() ? new UserEntity(grant.roleHolder) : roleHolderL.get(0);
+                        var changeBy = changeByL.isEmpty() ? new UserEntity(grant.changeBy) : changeByL.get(0);
+
+                        // Create new role assignment log entry
+                        var newRoleLog = new RoleLogEntity(grant.role, grant.assign, roleHolder, changeBy);
+                        return session.persist(newRoleLog);
+                    });
+            })
+            .chain(unused -> {
+                // Role grant logged, success
+                return Uni.createFrom().voidItem();
+            });
+
+        return result;
+    }
+
     /**
      * Assign a role to a user.
      * @param auth The access token needed to call the service.
-     * @param checkinUserId The Check-in Id of the user to assign the role to.
+     * @param userId The Check-in Id of the user to assign the role to (unused).
+     * @param grant The role to assign and the user to assign to.
      * @return API Response, wraps an ActionSuccess or an ActionError entity
      */
     @POST
-    @Path("/role/{checkinUserId}")
+    @Path("/role/{userId}")
     @SecurityRequirement(name = "OIDC")
+    @Consumes(MediaType.APPLICATION_JSON)
     @RolesAllowed({ Role.IMS_OWNER, Role.IMS_MANAGER })
     @Operation(operationId = "assignRoleToUser",  summary = "Assign a role to a user",
-               description ="To assign roles to a user, the user must be included in the SLM process.")
+               description ="To assign roles to a user, the user must be included in the SYS process.")
     @APIResponses(value = {
             @APIResponse(responseCode = "200", description = "Assigned",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON,
@@ -488,34 +616,49 @@ public class Users extends BaseResource {
     })
     public Uni<Response> assignRoleToUser(@RestHeader(HttpHeaders.AUTHORIZATION) String auth,
 
-                                          @RestPath("checkinUserId")
+                                          @RestPath("userId")
                                           @Parameter(description = "Id of user to assign the role to")
-                                          int checkinUserId,
+                                          String userId,
 
-                                          @RestQuery("role")
-                                          @Parameter(description = "The role to assign to the user")
-                                          @Schema(enumeration = {
-                                                  Role.IMS_OWNER, Role.IMS_MANAGER, Role.IMS_DEVELOPER,
-                                                  Role.STRATEGY_COORDINATOR, Role.OPERATIONS_COORDINATOR })
-                                          String role) {
+                                          RoleGrant grant)
+    {
+        grant.changeBy = new User(
+                (String)identity.getAttribute(CheckinUser.ATTR_USERID),
+                (String)identity.getAttribute(CheckinUser.ATTR_FULLNAME),
+                (String)identity.getAttribute(CheckinUser.ATTR_EMAIL) );
 
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
-        addToDC("checkinUserId", checkinUserId);
-        addToDC("roleName", role);
+        addToDC("userIdCaller", grant.changeBy.checkinUserId);
+        addToDC("userNameCaller", grant.changeBy.fullName);
+        addToDC("grant", grant);
 
         log.info("Assigning role to user");
 
-        if(null == role || !(
-                role.equalsIgnoreCase(Role.IMS_OWNER) ||
-                role.equalsIgnoreCase(Role.IMS_MANAGER) ||
-                role.equalsIgnoreCase(Role.IMS_DEVELOPER) ||
-                role.equalsIgnoreCase(Role.STRATEGY_COORDINATOR) ||
-                role.equalsIgnoreCase(Role.OPERATIONS_COORDINATOR)) ) {
-            var ae = new ActionError("badRequest", "Unknown role", Tuple2.of("role", role));
+        if(null == grant) {
+            var ae = new ActionError("badRequest", "Missing role grant");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+        if(null == grant.roleHolder || null == grant.roleHolder.checkinUserId || grant.roleHolder.checkinUserId.isBlank()) {
+            // Assignee must be specified
+            var ae = new ActionError("badRequest", "Role holder is required");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+        if(null == grant.role || grant.role.isEmpty()) {
+            // Role must be specified
+            var ae = new ActionError("badRequest", "Role constant is required");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+        if(!grant.role.equalsIgnoreCase(Role.IMS_OWNER) &&
+           !grant.role.equalsIgnoreCase(Role.IMS_MANAGER) &&
+           !grant.role.equalsIgnoreCase(Role.IMS_DEVELOPER) &&
+           !grant.role.equalsIgnoreCase(Role.STRATEGY_COORDINATOR) &&
+           !grant.role.equalsIgnoreCase(Role.OPERATIONS_COORDINATOR) ) {
+            var ae = new ActionError("badRequest", "Unknown role", Tuple2.of("role", grant.role));
             return Uni.createFrom().item(ae.toResponse());
         }
 
+        grant.assign = true;
+
+        var assigned = new ArrayList<Boolean>();
         Uni<Response> result = Uni.createFrom().nullItem()
 
             .chain(unused -> {
@@ -527,15 +670,28 @@ public class Users extends BaseResource {
                 return Uni.createFrom().item(unused);
             })
             .chain(unused -> {
-                // Add role
-                return checkin.assignUserRoleAsync(checkinUserId, this.imsConfig.group(), role);
+                // Assign role
+                return checkin.assignUserRoleAsync(grant.roleHolder.checkinUserId, this.imsConfig.group(), grant.role);
+            })
+            .chain(addedOrUpdated -> {
+                // Assigned role, log it
+                assigned.add(true);
+                return logRoleAssignment(grant);
             })
             .chain(unused -> {
-                // Added role, success
+                // Role assignment logged, success
                 log.info("Assigned role to user");
-                return Uni.createFrom().item(Response.ok(new ActionSuccess("Assigned")).build());
+                return Uni.createFrom().item(Response.ok(new ActionSuccess("Assigned, logged")).build());
             })
             .onFailure().recoverWithItem(e -> {
+                if(!assigned.isEmpty()) {
+                    // Role assigned, but not logged
+                    log.error("Assigned role, but failed to log it");
+                    return Response.ok(new ActionSuccess("Assigned, but not logged"))
+                                   .status(Response.Status.CREATED)
+                                   .build();
+                }
+
                 log.error("Failed to assign role to user");
                 return new ActionError(e, Tuple2.of("oidcInstance", this.checkinConfig.server())).toResponse();
             });
@@ -546,12 +702,14 @@ public class Users extends BaseResource {
     /**
      * Revoke a role from a user.
      * @param auth The access token needed to call the service.
-     * @param checkinUserId The Check-in Id of the user to revoke the role from
+     * @param userId The Check-in Id of the user to revoke the role from (unused).
+     * @param grant The role to revoke and the user to revoke it from.
      * @return API Response, wraps an ActionSuccess or an ActionError entity
      */
     @DELETE
-    @Path("/role/{checkinUserId}")
+    @Path("/role/{userId}")
     @SecurityRequirement(name = "OIDC")
+    @Consumes(MediaType.APPLICATION_JSON)
     @RolesAllowed({ Role.IMS_OWNER, Role.IMS_MANAGER })
     @Operation(operationId = "revokeRoleFromUser",  summary = "Revoke a role from a user")
     @APIResponses(value = {
@@ -570,57 +728,85 @@ public class Users extends BaseResource {
     })
     public Uni<Response> revokeRoleFromUser(@RestHeader(HttpHeaders.AUTHORIZATION) String auth,
 
-                                            @RestPath("checkinUserId")
+                                            @RestPath("userId")
                                             @Schema(title = "Id of user to revoke the role from")
-                                            int checkinUserId,
+                                            String userId,
 
-                                            @RestQuery("role")
-                                            @Parameter(description = "The role to revoke from the user")
-                                            @Schema(enumeration = {
-                                                    Role.IMS_OWNER, Role.IMS_MANAGER, Role.IMS_DEVELOPER,
-                                                    Role.STRATEGY_COORDINATOR, Role.OPERATIONS_COORDINATOR })
-                                            String role) {
+                                            RoleGrant grant)
+    {
+        grant.changeBy = new User(
+                (String)identity.getAttribute(CheckinUser.ATTR_USERID),
+                (String)identity.getAttribute(CheckinUser.ATTR_FULLNAME),
+                (String)identity.getAttribute(CheckinUser.ATTR_EMAIL) );
 
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
-        addToDC("checkinUserId", checkinUserId);
-        addToDC("roleName", role);
+        addToDC("userIdCaller", grant.changeBy.checkinUserId);
+        addToDC("userNameCaller", grant.changeBy.fullName);
+        addToDC("grant", grant);
 
         log.info("Revoking role from user");
 
-        if(null == role || !(
-                role.equalsIgnoreCase(Role.IMS_OWNER) ||
-                role.equalsIgnoreCase(Role.IMS_MANAGER) ||
-                role.equalsIgnoreCase(Role.IMS_DEVELOPER) ||
-                role.equalsIgnoreCase(Role.STRATEGY_COORDINATOR) ||
-                role.equalsIgnoreCase(Role.OPERATIONS_COORDINATOR)) ) {
-            var ae = new ActionError("badRequest", "Unknown role", Tuple2.of("role", role));
+        if(null == grant) {
+            var ae = new ActionError("badRequest", "Missing role grant");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+        if(null == grant.roleHolder || null == grant.roleHolder.checkinUserId || grant.roleHolder.checkinUserId.isEmpty()) {
+            // Assignee must be specified
+            var ae = new ActionError("badRequest", "Role holder is required");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+        if(null == grant.role || grant.role.isEmpty()) {
+            // Role must be specified
+            var ae = new ActionError("badRequest", "Role constant is required");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+        if(!grant.role.equalsIgnoreCase(Role.IMS_OWNER) &&
+           !grant.role.equalsIgnoreCase(Role.IMS_MANAGER) &&
+           !grant.role.equalsIgnoreCase(Role.IMS_DEVELOPER) &&
+           !grant.role.equalsIgnoreCase(Role.STRATEGY_COORDINATOR) &&
+           !grant.role.equalsIgnoreCase(Role.OPERATIONS_COORDINATOR) ) {
+            var ae = new ActionError("badRequest", "Unknown role", Tuple2.of("role", grant.role));
             return Uni.createFrom().item(ae.toResponse());
         }
 
+        grant.assign = false;
+
+        var revoked = new ArrayList<Boolean>();
         Uni<Response> result = Uni.createFrom().nullItem()
 
-                .chain(unused -> {
-                    // Get REST client for Check-in
-                    if (!checkin.init(this.checkinConfig, this.imsConfig, stub))
-                        // Could not get REST client
-                        return Uni.createFrom().failure(new ServiceException("invalidConfig"));
+            .chain(unused -> {
+                // Get REST client for Check-in
+                if (!checkin.init(this.checkinConfig, this.imsConfig, stub))
+                    // Could not get REST client
+                    return Uni.createFrom().failure(new ServiceException("invalidConfig"));
 
-                    return Uni.createFrom().item(unused);
-                })
-                .chain(unused -> {
-                    // Revoke role
-                    return checkin.revokeUserRoleAsync(checkinUserId, this.imsConfig.group(), role);
-                })
-                .chain(unused -> {
-                    // Revoked role, success
-                    log.info("Revoked role from user");
-                    return Uni.createFrom().item(Response.ok(new ActionSuccess("Revoked")).build());
-                })
-                .onFailure().recoverWithItem(e -> {
-                    log.error("Failed to revoke role from user");
-                    return new ActionError(e, Tuple2.of("oidcInstance", this.checkinConfig.server())).toResponse();
-                });
+                return Uni.createFrom().item(unused);
+            })
+            .chain(unused -> {
+                // Revoke role
+                return checkin.revokeUserRoleAsync(grant.roleHolder.checkinUserId, this.imsConfig.group(), grant.role);
+            })
+            .chain(success -> {
+                // Revoked role, log it
+                revoked.add(true);
+                return logRoleAssignment(grant);
+            })
+            .chain(unused -> {
+                // Revoked role, success
+                log.info("Revoked role from user");
+                return Uni.createFrom().item(Response.ok(new ActionSuccess("Revoked")).build());
+            })
+            .onFailure().recoverWithItem(e -> {
+                if(!revoked.isEmpty()) {
+                    // Role assigned, but not logged
+                    log.error("Revoked role, but failed to log it");
+                    return Response.ok(new ActionSuccess("Revoked, but not logged"))
+                            .status(Response.Status.CREATED)
+                            .build();
+                }
+
+                log.error("Failed to revoke role from user");
+                return new ActionError(e, Tuple2.of("oidcInstance", this.checkinConfig.server())).toResponse();
+            });
 
         return result;
     }
@@ -630,7 +816,7 @@ public class Users extends BaseResource {
      * Note: Membership in the group is not considered a role, but a prerequisite to holding a role.
      * @param auth The access token needed to call the service.
      * @param roleName Only return role matching this expression. If empty or null, all roles are returned.
-     * @param offset The number of elements to skip
+     * @param from The number of elements to skip
      * @param limit_ The maximum number of elements to return
      * @return API Response, wraps an ActionSuccess({@link PageOfRoleInfos}) or an ActionError entity
      */
@@ -638,7 +824,7 @@ public class Users extends BaseResource {
     @Path("/roles/assigned")
     @SecurityRequirement(name = "OIDC")
     @RolesAllowed({ Role.IMS_USER })
-    @Operation(operationId = "listAssignedRoles",  summary = "List assigned roles in the SLM process")
+    @Operation(operationId = "listAssignedRoles",  summary = "List assigned roles in the SYS process")
     @APIResponses(value = {
             @APIResponse(responseCode = "200", description = "Success",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON,
@@ -658,22 +844,22 @@ public class Users extends BaseResource {
                                             @Parameter(description = "Return only roles matching this expression")
                                             String roleName,
 
-                                            @RestQuery("offset")
+                                            @RestQuery("from")
                                             @Parameter(description = "Skip the first given number of results")
                                             @Schema(defaultValue = "0")
-                                            long offset,
+                                            long from,
 
                                             @RestQuery("limit")
                                             @Parameter(description = "Restrict the number of results returned")
                                             @Schema(defaultValue = "100")
-                                            long limit_) {
+                                            int limit_)
+    {
+        final int limit = (0 == limit_) ? 100 : limit_;
 
-        final long limit = (0 == limit_) ? 100 : limit_;
-
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
+        addToDC("userIdCaller", identity.getAttribute(CheckinUser.ATTR_USERID));
+        addToDC("userNameCaller", identity.getAttribute(CheckinUser.ATTR_FULLNAME));
         addToDC("roleName", roleName);
-        addToDC("offset", offset);
+        addToDC("from", from);
         addToDC("limit", limit);
 
         log.info("Listing assigned roles");
@@ -696,7 +882,7 @@ public class Users extends BaseResource {
                 // Got roles, success
                 log.info("Got assigned roles");
                 var uri = getRealRequestUri(uriInfo, httpHeaders);
-                var page = new PageOfRoleInfos(uri.toString(), offset, limit, roles);
+                var page = new PageOfRoleInfos(uri.toString(), from, limit, roles);
                 return Uni.createFrom().item(Response.ok(page).build());
             })
             .onFailure().recoverWithItem(e -> {
@@ -736,11 +922,13 @@ public class Users extends BaseResource {
                                    @Schema(enumeration = {
                                            Role.IMS_OWNER, Role.IMS_MANAGER, Role.IMS_DEVELOPER,
                                            Role.STRATEGY_COORDINATOR, Role.OPERATIONS_COORDINATOR,
+                                           Role.PROCESS_OWNER, Role.PROCESS_MANAGER,
+                                           Role.SERVICE_OWNER, Role.REPORT_OWNER,
                                            Role.PROCESS_MEMBER })
                                    String role)
     {
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
+        addToDC("userIdCaller", identity.getAttribute(CheckinUser.ATTR_USERID));
+        addToDC("userNameCaller", identity.getAttribute(CheckinUser.ATTR_FULLNAME));
         addToDC("roleName", role);
 
         log.info("Listing role definitions");
@@ -748,7 +936,7 @@ public class Users extends BaseResource {
         Uni<Response> result = Uni.createFrom().nullItem()
 
             .chain(unused -> {
-                return null != role && !role.trim().isEmpty() ?
+                return null != role && !role.isBlank() ?
                     sf.withSession(session -> RoleEntity.getRoleAllVersions(role.trim().toLowerCase())) :
                     sf.withSession(session -> RoleEntity.getAllRoles());
             })
@@ -774,9 +962,9 @@ public class Users extends BaseResource {
                         @Override
                         public int compare(Role lhs, Role rhs) {
                             // -1 means lhs < rhs, 1 means lhs > rhs, 0 means equal for ascending sort
-                            if(null == lhs.globalRoleId && null != rhs.globalRoleId)
+                            if(!lhs.assignable && rhs.assignable)
                                 return 1;
-                            else if(null != lhs.globalRoleId && null == rhs.globalRoleId)
+                            else if(lhs.assignable && !rhs.assignable)
                                 return -1;
 
                             return lhs.name.compareTo(rhs.name);
@@ -808,6 +996,7 @@ public class Users extends BaseResource {
     @POST
     @Path("/role/definition")
     @SecurityRequirement(name = "OIDC")
+    @Consumes(MediaType.APPLICATION_JSON)
     @RolesAllowed({ Role.IMS_OWNER, Role.IMS_MANAGER })
     @Operation(operationId = "addRole",  summary = "Add new role")
     @APIResponses(value = {
@@ -826,17 +1015,17 @@ public class Users extends BaseResource {
     })
     public Uni<Response> addRole(@RestHeader(HttpHeaders.AUTHORIZATION) String auth, Role role)
     {
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
+        role.changeBy = new User(
+                (String)identity.getAttribute(CheckinUser.ATTR_USERID),
+                (String)identity.getAttribute(CheckinUser.ATTR_FULLNAME),
+                (String)identity.getAttribute(CheckinUser.ATTR_EMAIL) );
+
+        addToDC("userIdCaller", role.changeBy.checkinUserId);
+        addToDC("userNameCaller", role.changeBy.fullName);
         addToDC("role", role);
 
         log.info("Adding role");
 
-        if(null == role.changeBy || null == role.changeBy.checkinUserId || role.changeBy.checkinUserId < 0) {
-            // No anonymous changes allowed
-            var ae = new ActionError("badRequest", "Check-in identity is required");
-            return Uni.createFrom().item(ae.toResponse());
-        }
         if(null == role.role || role.role.isEmpty()) {
             // Role must be specified
             var ae = new ActionError("badRequest", "Role constant is required");
@@ -869,7 +1058,7 @@ public class Users extends BaseResource {
                     });
                 });
             })
-            .chain(updated -> {
+            .chain(unused -> {
                 // Add complete, success
                 log.info("Added role");
                 return Uni.createFrom().item(Response.ok(new ActionSuccess("Added"))
@@ -891,6 +1080,7 @@ public class Users extends BaseResource {
     @PUT
     @Path("/role/definition")
     @SecurityRequirement(name = "OIDC")
+    @Consumes(MediaType.APPLICATION_JSON)
     @RolesAllowed({ Role.IMS_OWNER, Role.IMS_MANAGER })
     @Operation(operationId = "updateRole",  summary = "Update role definition")
     @APIResponses(value = {
@@ -909,17 +1099,17 @@ public class Users extends BaseResource {
     })
     public Uni<Response> updateRole(@RestHeader(HttpHeaders.AUTHORIZATION) String auth, Role role)
     {
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
+        role.changeBy = new User(
+                (String)identity.getAttribute(CheckinUser.ATTR_USERID),
+                (String)identity.getAttribute(CheckinUser.ATTR_FULLNAME),
+                (String)identity.getAttribute(CheckinUser.ATTR_EMAIL) );
+
+        addToDC("userIdCaller", role.changeBy.checkinUserId);
+        addToDC("userNameCaller", role.changeBy.fullName);
         addToDC("role", role);
 
         log.info("Updating role");
 
-        if(null == role.changeBy || null == role.changeBy.checkinUserId || role.changeBy.checkinUserId < 0) {
-            // No anonymous changes allowed
-            var ae = new ActionError("badRequest", "Check-in identity is required");
-            return Uni.createFrom().item(ae.toResponse());
-        }
         if(null == role.role || role.role.isEmpty()) {
             // Role must be specified
             var ae = new ActionError("badRequest", "Role constant is required");
@@ -963,7 +1153,7 @@ public class Users extends BaseResource {
                     });
                 });
             })
-            .chain(updated -> {
+            .chain(unused -> {
                 // Update complete, success
                 log.info("Updated role");
                 return Uni.createFrom().item(Response.ok(new ActionSuccess("Updated"))
@@ -980,11 +1170,14 @@ public class Users extends BaseResource {
     /**
      * Mark role as implemented.
      * @param auth The access token needed to call the service.
+     * @param role The role to implement.
+     * @param change Contains the change description.
      * @return API Response, wraps an ActionSuccess or an ActionError entity
      */
     @PATCH
     @Path("/role/definition/{role}")
     @SecurityRequirement(name = "OIDC")
+    @Consumes(MediaType.APPLICATION_JSON)
     @RolesAllowed({ Role.IMS_DEVELOPER })
     @Operation(operationId = "implementRole",  summary = "Implement role")
     @APIResponses(value = {
@@ -1009,19 +1202,18 @@ public class Users extends BaseResource {
 
                                        Change change)
     {
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
+        var changeBy = new User(
+                (String)identity.getAttribute(CheckinUser.ATTR_USERID),
+                (String)identity.getAttribute(CheckinUser.ATTR_FULLNAME),
+                (String)identity.getAttribute(CheckinUser.ATTR_EMAIL) );
+
+        addToDC("userIdCaller", changeBy.checkinUserId);
+        addToDC("userNameCaller", changeBy.fullName);
         addToDC("roleName", role);
         addToDC("change", change);
 
         log.info("Implementing role");
 
-        if(null == change || null == change.changeBy ||
-           null == change.changeBy.checkinUserId || change.changeBy.checkinUserId < 0) {
-            // No anonymous changes allowed
-            var ae = new ActionError("badRequest", "Check-in identity is required");
-            return Uni.createFrom().item(ae.toResponse());
-        }
         if(null == role || role.isEmpty()) {
             // Role must be specified
             var ae = new ActionError("badRequest", "Role is required");
@@ -1049,12 +1241,12 @@ public class Users extends BaseResource {
 
                         // Check if caller user already exist in the database
                         UserEntity existingUser = null;
-                        if(null != latestRole.changeBy && change.changeBy.checkinUserId.equals(latestRole.changeBy.checkinUserId))
+                        if(null != latestRole.changeBy && changeBy.checkinUserId.equals(latestRole.changeBy.checkinUserId))
                             existingUser = latestRole.changeBy;
                         if(null != existingUser)
                             return Uni.createFrom().item(existingUser);
 
-                        return UserEntity.findByCheckinUserId(change.changeBy.checkinUserId);
+                        return UserEntity.findByCheckinUserId(changeBy.checkinUserId);
                     })
                     .chain(existingUser -> {
                         // Got caller user, if it exists in the database
@@ -1067,7 +1259,7 @@ public class Users extends BaseResource {
                     });
                 });
             })
-            .chain(updated -> {
+            .chain(unused -> {
                 // Update complete, success
                 log.info("Implemented role");
                 return Uni.createFrom().item(Response.ok(new ActionSuccess("Implemented"))
@@ -1084,11 +1276,14 @@ public class Users extends BaseResource {
     /**
      * Deprecate role.
      * @param auth The access token needed to call the service.
+     * @param role The role to deprecate.
+     * @param change Contains the change description.
      * @return API Response, wraps an ActionSuccess or an ActionError entity
      */
     @DELETE
     @Path("/role/definition/{role}")
     @SecurityRequirement(name = "OIDC")
+    @Consumes(MediaType.APPLICATION_JSON)
     @RolesAllowed({ Role.IMS_OWNER })
     @Operation(operationId = "deprecateRole",  summary = "Deprecate role")
     @APIResponses(value = {
@@ -1113,19 +1308,18 @@ public class Users extends BaseResource {
 
                                        Change change)
     {
-        addToDC("userId", identity.getAttribute(CheckinUser.ATTR_USERID));
-        addToDC("userName", identity.getAttribute(CheckinUser.ATTR_USERNAME));
+        var changeBy = new User(
+                (String)identity.getAttribute(CheckinUser.ATTR_USERID),
+                (String)identity.getAttribute(CheckinUser.ATTR_FULLNAME),
+                (String)identity.getAttribute(CheckinUser.ATTR_EMAIL) );
+
+        addToDC("userIdCaller", changeBy.checkinUserId);
+        addToDC("userNameCaller", changeBy.fullName);
         addToDC("roleName", role);
         addToDC("change", change);
 
         log.info("Deprecating role");
 
-        if(null == change || null == change.changeBy ||
-           null == change.changeBy.checkinUserId || change.changeBy.checkinUserId < 0) {
-            // No anonymous changes allowed
-            var ae = new ActionError("badRequest", "Check-in identity is required");
-            return Uni.createFrom().item(ae.toResponse());
-        }
         if(null == role || role.isEmpty()) {
             // Role must be specified
             var ae = new ActionError("badRequest", "Role is required");
@@ -1153,12 +1347,12 @@ public class Users extends BaseResource {
 
                         // Check if caller user already exist in the database
                         UserEntity existingUser = null;
-                        if(null != latestRole.changeBy && change.changeBy.checkinUserId.equals(latestRole.changeBy.checkinUserId))
+                        if(null != latestRole.changeBy && changeBy.checkinUserId.equals(latestRole.changeBy.checkinUserId))
                             existingUser = latestRole.changeBy;
                         if(null != existingUser)
                             return Uni.createFrom().item(existingUser);
 
-                        return UserEntity.findByCheckinUserId(change.changeBy.checkinUserId);
+                        return UserEntity.findByCheckinUserId(changeBy.checkinUserId);
                     })
                     .chain(existingUser -> {
                         // Got caller user, if it exists in the database
@@ -1171,7 +1365,7 @@ public class Users extends BaseResource {
                     });
                 });
             })
-            .chain(updated -> {
+            .chain(unused -> {
                 // Deprecation complete, success
                 log.info("Deprecated role");
                 return Uni.createFrom().item(Response.ok(new ActionSuccess("Deprecated"))
@@ -1180,6 +1374,109 @@ public class Users extends BaseResource {
             .onFailure().recoverWithItem(e -> {
                 log.error("Failed to deprecate role");
                 return new ActionError(e).toResponse();
+            });
+
+        return result;
+    }
+
+    /**
+     * List assignment logs for a role.
+     * @param auth The access token needed to call the service.
+     * @param role The to return assignment logs for.
+     * @param from_ The first element to return
+     * @param limit_ The maximum number of elements to return
+     * @return API Response, wraps an ActionSuccess({@link PageOfRoleLogs}) or an ActionError entity
+     */
+    @GET
+    @Path("/role/logs")
+    @SecurityRequirement(name = "OIDC")
+    @RolesAllowed({ Role.IMS_OWNER, Role.IMS_MANAGER })
+    @Operation(operationId = "listRoleLogs",
+               summary = "List role assignment logs",
+               description = "Returns logs in reverse chronological order")
+    @APIResponses(value = {
+            @APIResponse(responseCode = "200", description = "Success",
+                    content = @Content(mediaType = MediaType.APPLICATION_JSON,
+                    schema = @Schema(implementation = PageOfRoleLogs.class))),
+            @APIResponse(responseCode = "400", description="Invalid parameters or configuration",
+                    content = @Content(mediaType = MediaType.APPLICATION_JSON,
+                    schema = @Schema(implementation = ActionError.class))),
+            @APIResponse(responseCode = "401", description="Authorization required"),
+            @APIResponse(responseCode = "403", description="Permission denied"),
+            @APIResponse(responseCode = "503", description="Try again later")
+    })
+    public Uni<Response> listRoleLogs(@RestHeader(HttpHeaders.AUTHORIZATION) String auth,
+                                      @Context UriInfo uriInfo,
+                                      @Context HttpHeaders httpHeaders,
+
+                                      @RestQuery("role")
+                                      @Parameter(description = "Return assignment logs for this role")
+                                      @Schema(required = true, enumeration = {
+                                              Role.IMS_OWNER, Role.IMS_MANAGER, Role.IMS_DEVELOPER,
+                                              Role.STRATEGY_COORDINATOR, Role.OPERATIONS_COORDINATOR,
+                                              Role.PROCESS_MEMBER })
+                                      String role,
+
+                                      @RestQuery("from")
+                                      @Parameter(description = "Only return logs before this date and time")
+                                      @Schema(format = "yyyy-mm-ddThh:mm:ss", defaultValue = "now")
+                                      String from_,
+
+                                      @RestQuery("limit")
+                                      @Parameter(description = "Restrict the number of results returned")
+                                      @Schema(defaultValue = "100")
+                                      int limit_)
+    {
+        final int limit = (0 == limit_) ? 100 : limit_;
+
+        addToDC("userIdCaller", identity.getAttribute(CheckinUser.ATTR_USERID));
+        addToDC("userNameCaller", identity.getAttribute(CheckinUser.ATTR_FULLNAME));
+        addToDC("roleName", role);
+        addToDC("from", from_);
+        addToDC("limit", limit);
+
+        log.info("Listing role assignment logs");
+
+        if(null == role || role.isEmpty()) {
+            // Role must be specified
+            var ae = new ActionError("badRequest", "Role constant is required");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+
+        LocalDateTime from = null;
+        try {
+            if((null == from_ || from_.isBlank() || from_.equalsIgnoreCase("now")))
+                from = LocalDateTime.now();
+            else
+                from = LocalDateTime.parse(from_);
+        }
+        catch(DateTimeParseException e) {
+            var ae = new ActionError("badRequest", "Invalid parameter from");
+            return Uni.createFrom().item(ae.toResponse());
+        }
+
+        LocalDateTime finalFrom = from;
+        Uni<Response> result = Uni.createFrom().nullItem()
+
+            .chain(unused -> {
+                return sf.withSession(session -> RoleLogEntity.getRoleAssignments(role.trim().toLowerCase(), finalFrom, limit));
+            })
+            .chain(logs -> {
+                // Got role logs, success
+                log.info("Got role assignment logs");
+                var uri = getRealRequestUri(uriInfo, httpHeaders);
+                var page = new PageOfRoleLogs(uri.toString(), finalFrom, limit, logs);
+                var logCount = logs.size();
+                if(!logs.isEmpty() && logCount == limit) {
+                    var lastLog = logs.get(logCount - 1);
+                    page.setNextPage(lastLog.changedOn, limit);
+                }
+
+                return Uni.createFrom().item(Response.ok(page).build());
+            })
+            .onFailure().recoverWithItem(e -> {
+                log.error("Failed to list role assignment logs");
+                return new ActionError(e, Tuple2.of("oidcInstance", this.checkinConfig.server())).toResponse();
             });
 
         return result;
